--- a/city-shopping-shoppinglist.html
+++ b/city-shopping-shoppinglist.html
@@ -22,7 +22,7 @@
             <button class="game_field-header-btn" id = "checkBtn">ПРОВЕРИТЬ</button>
              <div class="game_field-title_subtitle">
                 <h1 class="game_field-title">Список покупок</h1>
-                <div class="game_field-subtitle">ЗАДАНИЕ: Перетяни товары из списка покупок к соответствующему магазину. Затем подпиши вывеску для магазина</div>
+                <div class="game_field-subtitle">ЗАДАНИЕ: Перетяни товары из списка покупок к соответствующему магазину. Затем подпиши вывеску для магазина.</div>
              </div>
             <button  class="game_field-header-btn" id = "againBtn">НАЧАТЬ ЗАНОВО</button>
         </div>
