--- a/city-restaurant-menu.html
+++ b/city-restaurant-menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Один и много</title>
+    <title>Мнню</title>
 
     <!-- Подключение шрифтов on-line -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/normalize.css">   <!-- Подключение normalize.css ОБЯЗАТЕЛЬНО ДО файла с нашими стилями -->
-    <link rel="stylesheet" href="css/modal.css">    <!-- Для работы с модальными окнами -->
+    <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/style.min.css">
 
     <script src="js/jquery-3.7.1.js"></script>  <!-- Подключать БЕЗ defer (загружать в фоносом режиме), иначе не срабатывает -->
@@ -21,24 +21,29 @@
         <div class="game_field-header">
             <button class="game_field-header-btn" id = "checkBtn">ПРОВЕРИТЬ</button>
              <div class="game_field-title_subtitle">
-                <h1 class="game_field-title">Один и много</h1>
-                <div class="game_field-subtitle">ЗАДАНИЕ: Соедини пазлы с одним и тем же словом. Перетяни карточки в левый блок и поставь рядом с нужным словом.</div>
+                <h1 class="game_field-title">Меню ресторана</h1>
+                <div class="game_field-subtitle">ЗАДАНИЕ: Соедини одинаковые слова, написанные разным шрифтом. Перетащи карточки справа на лист меню.</div>
              </div>
-            <button  class="game_field-header-btn" id="againBtn">НАЧАТЬ ЗАНОВО</button>
+            <button  class="game_field-header-btn" id = "againBtn">НАЧАТЬ ЗАНОВО</button>
         </div>
 
         <div class="game_field-wrapper">
-            <div class="onemany-mainpart">
-                <!-- Карточки формируются в js -->
+            <div class="ramka-2-wr">
+                <div class="menu-mainpart ramka-2">
+                    <h2 class="menu-mainpart-title">МЕНЮ</h2>
+                    <h3>ресторана "Лучше, чем дома"</h3>
+                    <!-- Слова формируются из js -->
+                </div>
             </div>
-                
-            <div class="onemany-secondarypart" id="parentBig">
-                <!-- Карточки формируются в js -->
+            
+            <div class="menu-secondarypart" id="parentBig">
+            <!-- Слова для перетаскивания формируются из js -->
             </div>
         </div>
     </section>
 
+
     <script src="js/modal.js"></script>
-    <script type="module" src="js/onemany.js"></script>
+    <script type="module" src="js/menu.js"></script>
 </body>
 </html>
