--- a/index.html
+++ b/index.html
@@ -18,42 +18,10 @@
 
 <body>
 <!-- Верхнее меню выводим из файла topmenu.html -->
-    <div id="includedContent"></div>
+    <div id="includedTopmenu"></div>
 
-    <aside> <!-- Боковая панель (сайдбар) -->
-        <nav class="sidebar">
-          <ul>
-            <li><a href="#">Гуляем по городу</a></li>
-                <ul>
-                    <li><a href="#">Торговый квартал</a></li>
-                </ul>
-            <li><a href="#">Отдыхаем на острове</a></li>
-            <li><a href="#">Игры</a></li>
-                <ul>
-                    <li>
-                        <a href="#"  onClick="fullScreen2('city-shopping-goodsshops.html');return false;">Товары и магазины</a>
-                    </li>
-                    <li>
-                        <a href="#"  onClick="fullScreen2('city-shopping-shoppinglist.html');return false;">Список покупок</a>
-                    </li>
-                    <li>
-                        <a href="#" onClick="fullScreen2('city-shopping-hesheit.html');return false;">ОН/ОНА/ОНО</a>
-                    </li>
-                    <li>
-                        <a href="#" onClick="fullScreen2('city-shopping-hesheit-HW.html');return false;">ОН/ОНА/ОНО (ДЗ)</a>
-                    </li>
-                    <li>
-                        <a href="#" onClick="fullScreen2('city-shopping-onemany.html');return false;">Один и много</a>
-                    </li>
-                    <li>
-                        <a href="#" onClick="fullScreen2('city-shopping-toyshopstory.html');return false;">История одного магазина игрушек</a>
-                    </li>
-                    <a href="#" onClick="fullScreen2('city-shopping-encryption.html');return false;">Шифровка</a>
-
-                </ul>
-          </ul>
-        </nav>
-    </aside>
+<!-- Боковое> меню выводим из файла sidebar.html -->
+    <div id="includedSidebar"></div>
 
     <main> <!-- Основной контент страницы -->
         <section class="title"><img src="img/Solomya_school_colorful.png" alt="Solomya_school"></section>
@@ -66,8 +34,7 @@
             <div class="introduction-img"><img src="img/Mya_trnspBG_HELLO.png" alt="Mya"></div>
 
         </section>
-
-
+    </main>
     
     <script src="js/main.js"></script>
 </body>
